# keymapper

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  keymapper.conf
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: discussion-redirect.md
.github/scripts/: update-readme.py
.github/workflows/: build.yml  push.yml
cmake/: WaylandScanner.cmake
extra/: keymapper-git.rb  keymapper-launchd  keymapper.rb  wix-patch-file.xml
extra/chocolatey/: keymapper.nuspec
extra/chocolatey/tools/: chocolateyinstall.ps1
extra/gnome-shell/keymapper/: extension.js  metadata.json
extra/lib/systemd/system/: keymapperd.service
extra/share/applications/: keymapper.desktop
extra/share/gnome-shell/extensions/keymapper@houmain.github.com/: extension.js  metadata.json
extra/share/gnome-shell/keymapper/: extension.js  metadata.json
extra/share/kwin/scripts/keymapper/: metadata.json
extra/share/kwin/scripts/keymapper/contents/code/: main.js
extra/xdg/autostart/: keymapper.desktop
src/: version.h.in
src/client/: ClientState.cpp  ClientState.h  ConfigFile.cpp  ConfigFile.h  ControlPort.cpp  ControlPort.h  FocusedWindow.h  ServerPort.cpp  ServerPort.h  Settings.cpp  Settings.h
src/client/linux/: FocusedWindow.cpp  FocusedWindow.h  FocusedWindowDBus.cpp  FocusedWindowImpl.cpp  FocusedWindowImpl.h  FocusedWindowWlroots.cpp  FocusedWindowX11.cpp  main.cpp
src/client/unix/: FocusedWindowCarbon.cpp  FocusedWindowDBus.cpp  FocusedWindowImpl.cpp  FocusedWindowImpl.h  FocusedWindowWlroots.cpp  FocusedWindowX11.cpp  MessageBoxCocoa.mm  StringTyperCarbon.cpp  StringTyperGeneric.cpp  StringTyperImpl.cpp  StringTyperImpl.h  StringTyperWayland.cpp  StringTyperX11.cpp  StringTyperXKB.cpp  StringTyperXKB.h  TrayIcon.cpp  TrayIcon.h  TrayIconCocoa.mm  TrayIconGtk.cpp  main.cpp
src/client/windows/: FocusedWindow.cpp  StringTyper.cpp  execute_terminal_command.cpp  main.cpp  main.h  run_hook.cpp  run_interception.cpp
src/common/: Connection.cpp  Connection.h  DeviceDesc.h  Duration.h  Filter.h  Host.cpp  Host.h  KeyInfo.h  MessageType.h  common.cpp  expand_path.h  icon_svg.h  output.cpp  output.h  parse_regex.h  version.h.in
src/common/windows/: LimitSingleInstance.h  resource.rc.in  win.cpp  win.h
src/config/: Config.h  Key.cpp  Key.h  ParseConfig.cpp  ParseConfig.h  ParseKeySequence.cpp  ParseKeySequence.h  StringTyper.h  get_key_name.cpp  get_key_name.h  key_names.cpp  key_names.h  string_iteration.h
src/control/: ClientPort.cpp  ClientPort.h  Settings.cpp  Settings.h  main.cpp
src/control/windows/: expand_command.cpp
src/libs/Karabiner-DriverKit-VirtualHIDDevice/: README.md  elements-version.json  nod.LICENSE  version.json
src/libs/Karabiner-DriverKit-VirtualHIDDevice/include/pqrs/: thread_wait.hpp
src/libs/Karabiner-DriverKit-VirtualHIDDevice/include/pqrs/karabiner/driverkit/: client_protocol_version.hpp  client_protocol_version.hpp.in  driver_version.hpp  driver_version.hpp.in  version.hpp  virtual_hid_device_driver.hpp  virtual_hid_device_service.hpp
src/libs/Karabiner-DriverKit-VirtualHIDDevice/include/pqrs/karabiner/driverkit/virtual_hid_device_driver/: user_client_method.hpp
src/libs/Karabiner-DriverKit-VirtualHIDDevice/include/pqrs/karabiner/driverkit/virtual_hid_device_driver/hid_report/: apple_vendor_keyboard_input.hpp  apple_vendor_top_case_input.hpp  buttons.hpp  consumer_input.hpp  generic_desktop_input.hpp  keyboard_input.hpp  keys.hpp  modifier.hpp  modifiers.hpp  pointing_input.hpp
src/libs/Karabiner-DriverKit-VirtualHIDDevice/include/pqrs/karabiner/driverkit/virtual_hid_device_service/: client.hpp  constants.hpp  parameters.hpp  request.hpp  response.hpp  utility.hpp
src/linux/: common.cpp  common.h
src/linux/client/: ConfigFile.cpp  ConfigFile.h  FocusedWindow.cpp  ServerPort.cpp  ServerPort.h  Settings.cpp  Settings.h  ipc.cpp  ipc.h  main.cpp
src/linux/server/: ClientPort.cpp  ClientPort.h  GrabbedKeyboards.cpp  Settings.cpp  Settings.h  ipc.cpp  ipc.h  keyboard.cpp  keyboard.h  main.cpp  output.h  uinput_keyboard.cpp  uinput_keyboard.h
src/runtime/: Key.h  KeyEvent.h  MatchKeySequence.cpp  MatchKeySequence.h  MultiStage.cpp  MultiStage.h  Stage.cpp  Stage.h  Timeout.h
src/server/: ButtonDebouncer.cpp  ButtonDebouncer.h  ClientPort.cpp  ClientPort.h  ServerState.cpp  ServerState.h  Settings.cpp  Settings.h  verbose_debug_io.h
src/server/linux/: GrabbedDevices.cpp  GrabbedDevices.h  GrabbedKeyboards.cpp  GrabbedKeyboards.h  UinputDevice.cpp  UinputDevice.h  main.cpp  uinput_device.cpp  uinput_device.h
src/server/unix/: DeviceDescLinux.h  GrabbedDevices.h  GrabbedDevicesLinux.cpp  GrabbedDevicesMacOS.cpp  VirtualDevice.h  VirtualDeviceLinux.cpp  VirtualDeviceMacOS.cpp  VirtualDevices.h  VirtualDevicesLinux.cpp  VirtualDevicesMacOS.cpp  main.cpp
src/server/windows/: Devices.cpp  Devices.h  HookThread.cpp  HookThread.h  interception.h  main.cpp
src/test/: catch.hpp  test.cpp  test.h  test0_ParseKeySequence.cpp  test1_ParseConfig.cpp  test2_MatchKeySequence.cpp  test3_Stage.cpp  test4_Fuzz.cpp  test4_Server.cpp  test5_Fuzz.cpp
src/win32/: ConfigFile.cpp  ConfigFile.h  FocusedWindow.cpp  FocusedWindow.h  Settings.cpp  Settings.h  common.h  key_scan_code.cpp  key_scan_code.h  main.cpp  resource.rc.in  run_hook.cpp  run_interception.cpp  win.h
